--- a/Ex07.ipynb
+++ b/Ex07.ipynb
@@ -219,7 +219,7 @@
       "outputs": [],
       "source": [
         "n = 10\n",
-        "print('Name:           Register Number:        ')\n",
+        "print('Name:ANUSHARON S     Register Number: 212222240010')\n",
         "plt.figure(figsize=(20, 4))\n",
         "for i in range(1, n + 1):\n",
         "    # Display original\n",
