--- a/Ex07.ipynb
+++ b/Ex07.ipynb
@@ -156,7 +156,7 @@
       },
       "outputs": [],
       "source": [
-        "print('Name:           Register Number:        ')\n",
+        "print('Name:ANUSHARON S  Register Number:212222240010 ')\n",
         "autoencoder.summary()"
       ]
     },
